--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.ts",
-  "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts"
   },
   "author": {
     "name": "Yi-Chun Wang",
@@ -18,6 +18,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
 }
