--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.3.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   }
